--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<div id="title-background">
 		<h1>Welcome to the Color Game!</h1>
 		<p>The mission of this game is pick the right color. Show me what you got!</p>
-		<h1>Find the <span id="find" style="text-decoration: underline;"></span> square</h1>
+		<h1>Find the <span id="find" style="text-decoration: underline;"></span> rectangle</h1>
 		<br>
 	</div>
 	<div id="stripe">
